# git_databricks

./: .gitignore  README.md  pyproject.toml  requirements.txt
data_platform_pipelines/pipelines/: start_all_purpose_cluster.py  start_dw_cluster.py
data_platform_pipelines/pipelines/cleanup/: cleanup.py
data_platform_pipelines/pipelines/cleanupxcoms/: cleanupxcoms.py
data_platform_pipelines/pipelines/to_bronze/aws/: sqs.py
data_platform_pipelines/pipelines/to_bronze/bigquery/: ingestion_fintalk.py
data_platform_pipelines/pipelines/to_bronze/firebase/: ingestion_central_assinante.py
data_platform_pipelines/pipelines/to_bronze/gcp/: ingestion_databases.py
data_platform_pipelines/pipelines/to_bronze/google_cloud_plataform/: ingestion_loja.py
data_platform_pipelines/pipelines/to_bronze/sftp/: ingestion_infobip.py  ingestion_ytpremium.py
data_platform_pipelines/pipelines/to_landing/api/: ingestion_five9.py
data_platform_pipelines/pipelines/to_landing/aws/: sqs.py
data_platform_pipelines/pipelines/to_landing/bigquery/: ingestion_fintalk.py
data_platform_pipelines/pipelines/to_landing/databases/: ingestion_databases.py
data_platform_pipelines/pipelines/to_landing/firebase/: ingestion_app.py  ingestion_central_assinante.py
data_platform_pipelines/pipelines/to_landing/gcp/: ingestion_databases.py
data_platform_pipelines/pipelines/to_landing/google_cloud_plataform/: ingestion_loja.py
data_platform_pipelines/pipelines/utils/: datalake.py  monitoring.py
data_platform_pipelines/scripts/databricks_permissions/: doc.md  main.tf  variables.tf
(+17 files in other folders)
