[tool.poetry]
name = "bi-alloha"
version = "0.1.0"
description = ""
authors = ["kacristinaa <karinnecristina@stacktecnologias.com.br,>"]
readme = "README.md"
packages = [{include = "bi_alloha"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.56"
pyyaml = "^6.0.1"
httpx = "^0.27.0"
xmltodict = "^0.13.0"
pyspark = "^3.5.2"
pydantic = "1.10.6"
google-auth = "^2.34.0"
google-cloud-bigquery = "^3.25.0"
paramiko = "^3.5.0"
chardet = "^5.2.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
ruff = "^0.5.7"
taskipy = "^1.13.0"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.taskipy.tasks]
lint = "ruff check . ; ruff check . --diff"
format = "ruff check . --fix ; ruff format ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
